respnsive and alignment fixed and ready to deploy

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@ body {
   align-items: center;
   height: fit-content;
   margin: auto;
+  margin-top: 5%;
   background-color: hsl(30, 38%, 92%);
 }
 
@@ -19,4 +20,12 @@ body {
 img {
   width: 100%;
   height: 30rem;
+}
+
+.left-img {
+  object-fit: contain;
+}
+
+.my-pic {
+  border-radius: 1rem 0rem 0rem 1rem;
 }
